--- a/html/themes/custom/dc_theme/scss/_page-node-type-data-set.scss
+++ b/html/themes/custom/dc_theme/scss/_page-node-type-data-set.scss
@@ -142,7 +142,7 @@
   }
 
   // Edit buttons
-  div.block-bc-dc-edit-button {
+  .block-bc-dc-edit-button {
     margin-bottom: 0.5em;
     display: grid;
     & > *:first-child {
